--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==0.9.7
 aniso8601==2.0.0
 click==6.7
+dominate==2.3.1
 Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
@@ -17,5 +20,6 @@ python-editor==1.0.3
 pytz==2017.3
 six==1.11.0
 SQLAlchemy==1.2.1
+visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.1
